# grag

./: .gitignore  README.md  Readme.md  config.ini  config_Def.ini  default_config.ini  pyproject.toml  requirements.yml
.github/workflows/: build_linting.yml  docs.yml  linting.yml  main_build.yml  ruff_commit.yml  ruff_linting  ruff_linting.yml  sphinx-gitpg.yml
CONFIG_Run/Read_Config/: config.py  read_config.py
CONFIG_Run/config/: config.ini
ci/: Jenkinsfile  branch_Jenkinsfile  env_test.py  modify_config.py  modify_config_test.py  modify_test_status.py  unlock_deeplake.py
code/: BasicRAG-ingest_data.py  Readme.md  html_loader.py  markdown_load.py  pdf_dataload.py  retriever_app.py  txt_load.py
code/component/: chroma_async_test.py  chroma_client.py  chroma_db_decript.py  config.py  multivec_retriever.py  multivec_retriever_test.py  multivec_retriver.py  run_chroma.sh  text_splitter.py  txt_data_ingest.py
code/components/: chroma_client.py  config.py  ingestion.py  llama2_hub.py  llama_cpp.py  llm.py  markdown_loader.py  md_loader.py  multivec_retriever.py  parse_pdf.py  pdf_loader.py  pdf_parse.py  pdf_parse_decript.py  text_splitter.py  utils.py
code/pdf test output/: image output.docx  table output.docx  text output.docx
code/scripts/: quantize.py  reset_chroma.sh  reset_store.sh  run_chroma.sh
code/tests/: chroma_add_test.py  chroma_async_test.py  embedding_test.py  llm_test.py  llm_testing.py  multivec_retriever_test.py  parse_pdf_test.py
code/utils/: txt_data_ingest.py
cookbook/: README.rst
cookbook/Basic-RAG/: BasicRAG_CustomPrompt.py  BasicRAG_FewShotPrompt.py  BasicRAG_ingest.py  BasicRAG_refine.py  BasicRAG_stuff.py  RAG-PIPELINES.md  README.md  README.rst
cookbook/RAG-GUI/: README.rst  app.py
cookbook/Retriever-GUI/: README.rst  retriever_app.py
cookbook/Retriver-GUI/: README.rst  retriever_app.py
demo/: Readme.md
documentation/: AWS_Setup_Nvidia_Driver_Install.md  AWS_Setup_Python_Env.md  Building an effective RAG app.md  Data Sources.md  Deploying_Sphinx.rst  Sphinx - How to get started?.md  Sphinx - How to get started.md  challenges.md  pdf_loader.md
evaluation/: RAG_eval.md  README.md  answer_relevancy.py  beir_data_ingest.py  beir_metrics.py  beir_repeats.py  config.ini  data_ingest.py  faithfulness.py  rag_eval.py
evaluation/prompts/: few_shot.py  few_shot_func.py
evaluation/scripts/: reset_and_run_chroma.sh  run_chroma.sh
full_report/: Capstone5 Presentation v1.pptx  Readme.md  ~$Capstone5 Presentation v1.pptx
full_report/Latex_report/: Capstone5_report_v1.tex  Capstone5_report_v3.tex  Capstone5_report_v3.txt  File_Setup.tex  Sample_Report.tex  grag-report-v1.tex  grag_report_v1.tex  references.bib
full_report/Latex_report/fig/: GW_logo.eps
full_report/Word_Report/: Sample_Report.docx
gnn/: GAE.py  GAT_encoder.py  cran_data.py  data.py  data_loader.py  distribution.py  gat_gae_train.py  gen_json.py  graph_reconstruction.py  linear_decoder.py  main.py  main_gat.py  main_sageconv.py  sageconv_encoder.py  sageconv_gae_train.py  sageconv_model_old.py  utils.py  visualize_graph.py
llm_quantize/: README.md  quantize.py  readme.md
myvirtenv/: pyvenv.cfg
presentation/: Readme.md
projects/Basic-RAG/: BasciRAG_CustomPrompt.py  BasicRAG-ingest_data.py  BasicRAG.py  BasicRAG_CustomPrompt.py  BasicRAG_FewShotPrompt.py  BasicRAG_ingest.py  BasicRAG_refine.py  BasicRAG_stuff.py  BasicRAG_v1.py  BasicRAG_v1_depricated.py  BasicRAG_v2.py  RAG-Piplines.md  README.md
projects/Basic-RAG/prompts/: Llama-2_QA-refine_1.json  Llama-2_QA_1.json  Mixtral-8x7b_QA_1.json  few_shot.py  few_shot_func.py  prompt_structure.json
projects/Basic-RAG/tests/: BasicRAG_v1_test.py  BasicRAG_v2_test.py
projects/BasicRAG/: BasicRAG_v1.py  BasicRAG_v2.py
projects/BasicRAG/tests/: BasicRAG_v1_test.py  BasicRAG_v2_test.py
projects/RAG-GUI/: app.py
projects/Retriver-GUI/: retriever_app.py
proposal/: proposal.md  proposal_0.html  proposal_0.md
quantize/: readme.md
research_paper/: Readme.md
research_paper/Latex/: Paper_Temp.tex
src/: BasicRAG_LECL.py  Readme.md  config.ini
src/components/: chroma_client.py  config.py  embedding.py  llm.py  multivec_retriever.py  parse_pdf.py  prompts.py  text_splitter.py  utils.py
src/docs/: Makefile  conf.py  get_started.config.rst  get_started.installation.rst  get_started.introduction.rst  get_started.llms.rst  get_started.parse_pdf.rst  get_started.rst  get_started.vectordb.rst  grag.components.rst  grag.components.vectordb.rst  grag.prompts.rst  grag.quantize.rst  grag.rag.rst  index.rst  requirements.txt  sg_execution_times.rst
src/docs/auto_examples/: index.rst
src/evaluation/metrics/: faithfulness.py  faithfulness_gemma.py  faithfulness_json.py  metics.md  perplexity.py  rouge.py
src/grag/components/: chroma_client.py  create_config.py  embedding.py  llm.py  multivec_retriever.py  parse_pdf.py  prompt.py  text_splitter.py  utils.py
src/grag/prompts/: Llama-2_QA-refine_1.json  Llama-2_QA_1.json  Mixtral_QA_1.json  __init__.py  matcher.json
src/grag/quantize/: get_releases.py  get_repo.py  quantize.py  utils.py
src/grag/rag/: basic_rag.py
src/grag/resources/: default_config.ini
src/prompts/: Llama-2_QA_1.json
src/rag/: basic_rag.py
src/scripts/: reset_chroma.sh
src/tests/: README.md  basic_rag_test.py  chroma_add_test.py  chroma_async_test.py  chroma_test.py  embedding_test.py  llm_test.py  multivec_retriever_test.py  parse_pdf_test.py  prompts_test.py
(+177 files in other folders)
